--- a/components/DetailPage.module.css
+++ b/components/DetailPage.module.css
@@ -2063,6 +2063,21 @@
   width: 150px;
   height: 150px;
   border-radius: 40px;
+  /* 모바일에서 이모지 크기 조정 */
+}
+
+@media (max-width: 768px) {
+  .heroEmojiSize {
+    font-size: 80px;
+    width: 120px;
+    height: 120px;
+  }
+  
+  .clayEmoji {
+    font-size: 64px;
+    width: 100px;
+    height: 100px;
+  }
 }
 
 /* 애니메이션 효과 */
